Update version and release notes.

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.27.0'
+version '1.28.0'
 
 def ktor_version = "2.2.4"
 
@@ -56,13 +56,9 @@ intellij {
 
 patchPluginXml {
     changeNotes = """
-      <h2>1.27.0</h2>
+      <h2>1.28.0</h2>
       <ul>
-        <li>Support for 2022.3</li>
-        <li>"Bundled" package check setting will a live database PyUP.IO's public API. This API is meant for non-commercial projects only, so a message is shown.
- If you're scanning commercial projects, please use the PyPI API in the settings or register for an account with PyUP.io and enter your API key in settings </li>
-        <li>Updated to Java 17</li>
-        <li>Updated to newer KTor API client</li>
+        <li>Use new PyUp v2.0.0 API that supports commercial projects.</li>
       </ul>
       """
 }
