--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ intellij {
     type = 'PC'
     plugins = ['python-ce', 'yaml']
     updateSinceUntilBuild = false
-    version = '2023.2'
+    version = project.properties["intellijVersion"] ?: "2023.2"
 }
 
 patchPluginXml {
