--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.28.0'
+version '1.29.0'
 
 def ktor_version = "2.3.2"
 
@@ -47,11 +47,17 @@ test {
     dependsOn 'cleanTest'
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs = [
+            '-Djava.awt.headless=true'
+    ]
+}
+
 intellij {
     type = 'PC'
-    plugins = ['python-ce', 'yaml']
+    plugins = ['python-ce', 'org.jetbrains.plugins.yaml']
     updateSinceUntilBuild = false
-    version = '2023.1.3'
+    version = project.properties["intellijVersion"] ?: "2023.2"
 }
 
 patchPluginXml {
