--- a/build.gradle
+++ b/build.gradle
@@ -62,10 +62,9 @@ intellij {
 
 patchPluginXml {
     changeNotes = """
-      <h2>1.28.0</h2>
+      <h2>1.29.0</h2>
       <ul>
-        <li>Include the name of the project in vulnerability alerts and the location of the package to better aid multi-project environments.</li>
-        <li>Use new PyUp v2.0.0 API that supports commercial projects.</li>
+        <li>Support for 2023.2 series of IDEs.</li>
       </ul>
       """
 }
